--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,25 +1,16 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
 .footer {
-  justify-content: center;
-  align-content: center;
-  padding: 10px 5px 5px;
-}
-
-.notice-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: center;
-  align-items: center;
-  margin-top: 25px;
-}
-
-@media (max-width: 640px - 1px) {
-  .notice-container {
-    justify-content: space-around;
-  }
-}
-
-.notice-container h4 {
-  text-align: center;
-  margin: 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
