--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -1,9 +1,5 @@
-code[class*="language-"],
-pre[class*="language-"] {
-  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono",
-    "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
-    "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L",
-    "Courier New", Courier, monospace;
+code[class*="language-"] {
+  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
   font-size: 14px;
   line-height: 1.375;
   direction: ltr;
@@ -22,20 +18,50 @@ pre[class*="language-"] {
   color: #c5c8c6;
 }
 
-pre[class*="language-"]::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection {
-  text-shadow: none;
-  background: #b4b7b4;
+pre[class*="language-"] {
+  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+  font-size: 14px;
+  line-height: 1.375;
+  direction: ltr;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+  background: #1d1f21;
+  color: #c5c8c6;
+
+  &::-moz-selection, ::-moz-selection {
+    text-shadow: none;
+    background: #b4b7b4;
+  }
 }
 
-pre[class*="language-"]::selection,
-pre[class*="language-"] ::selection,
-code[class*="language-"]::selection,
-code[class*="language-"] ::selection {
-  text-shadow: none;
-  background: #b4b7b4;
+code[class*="language-"] {
+  &::-moz-selection, ::-moz-selection {
+    text-shadow: none;
+    background: #b4b7b4;
+  }
+}
+
+pre[class*="language-"] {
+  &::selection, ::selection {
+    text-shadow: none;
+    background: #b4b7b4;
+  }
+}
+
+code[class*="language-"] {
+  &::selection, ::selection {
+    text-shadow: none;
+    background: #b4b7b4;
+  }
 }
 
 pre[class*="language-"] {
@@ -49,97 +75,89 @@ pre[class*="language-"] {
   border-radius: 0.3em;
 }
 
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #969896;
+.token {
+  &.comment, &.prolog, &.doctype, &.cdata {
+    color: #969896;
+  }
+
+  &.punctuation {
+    color: #c5c8c6;
+  }
+
+  &.namespace {
+    opacity: 0.7;
+  }
+
+  &.operator, &.boolean, &.number {
+    color: #de935f;
+  }
+
+  &.property {
+    color: #f0c674;
+  }
+
+  &.tag {
+    color: #81a2be;
+  }
+
+  &.string {
+    color: #8abeb7;
+  }
+
+  &.selector {
+    color: #b294bb;
+  }
+
+  &.attr-name {
+    color: #de935f;
+  }
+
+  &.entity, &.url {
+    color: #8abeb7;
+  }
 }
 
-.token.punctuation {
-  color: #c5c8c6;
-}
-
-.token.namespace {
-  opacity: 0.7;
-}
-
-.token.operator,
-.token.boolean,
-.token.number {
-  color: #de935f;
-}
-
-.token.property {
-  color: #f0c674;
-}
-
-.token.tag {
-  color: #81a2be;
-}
-
-.token.string {
+.language-css .token.string, .style .token.string {
   color: #8abeb7;
 }
 
-.token.selector {
-  color: #b294bb;
-}
+.token {
+  &.attr-value, &.keyword, &.control, &.directive, &.unit {
+    color: #b5bd68;
+  }
 
-.token.attr-name {
-  color: #de935f;
-}
+  &.statement, &.regex, &.atrule {
+    color: #8abeb7;
+  }
 
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  color: #8abeb7;
-}
+  &.placeholder, &.variable {
+    color: #81a2be;
+  }
 
-.token.attr-value,
-.token.keyword,
-.token.control,
-.token.directive,
-.token.unit {
-  color: #b5bd68;
-}
+  &.deleted {
+    text-decoration: line-through;
+  }
 
-.token.statement,
-.token.regex,
-.token.atrule {
-  color: #8abeb7;
-}
+  &.inserted {
+    border-bottom: 1px dotted #fff;
+    text-decoration: none;
+  }
 
-.token.placeholder,
-.token.variable {
-  color: #81a2be;
-}
+  &.italic {
+    font-style: italic;
+  }
 
-.token.deleted {
-  text-decoration: line-through;
-}
+  &.important, &.bold {
+    font-weight: bold;
+  }
 
-.token.inserted {
-  border-bottom: 1px dotted #fff;
-  text-decoration: none;
-}
+  &.important {
+    color: #c66;
+  }
 
-.token.italic {
-  font-style: italic;
-}
-
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-
-.token.important {
-  color: #c66;
-}
-
-.token.entity {
-  cursor: help;
+  &.entity {
+    cursor: help;
+  }
 }
 
 pre > code.highlight {
